--- a/tags.css
+++ b/tags.css
@@ -10,8 +10,8 @@
 }
 
 .filter label {
-    font-size: 16px;
-    color: #fff; /* White text to match dark theme */
+    font-size: 32\px;
+    color: #a68ab7; /* White text to match dark theme */
     margin-right: 10px; /* Space between the label and the dropdown */
     font-weight: bold; /* Make the label stand out */
 }
@@ -54,7 +54,7 @@
     width: 215px;
     padding: 10px;
     padding-right: 0;
-    font-size: 16px;
+    font-size: 20px;
     border: 1px solid #4c3a62; /* Dark purple border */
     border-radius: 5px;
     background-color: #2c2c2c; /* Dark background */
